--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* Home.css */
 .hotel {
-  background: url("./assets/hotel-bg.jpg");
+  /* background: url("./assets/hotel-bg.jpg"); */
   background-size: cover;
 }
 
@@ -226,7 +226,7 @@
   align-items: center;
   padding: 20px;
   color: #ffffff;
-  background-color: transparent;
+  background-color: red;
   backdrop-filter: blur(10px);
 }
 
