--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,24 +1,22 @@
-/* Basic Reset */
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* Navbar Styles */
 .navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 15px 20px;
-  background: transparent;
-  /* Dark Blue-Grey */
-  color: #ecf0f1; /* Light Gray */
+  color: #ecf0f1; 
   position: relative;
   font-family: 'Arial', sans-serif;
   border: 1px solid white;
   border-radius: 8px;
   width: 100%;
+  height: 60px;
 }
 
 .navbar-brand .navbar-title {
@@ -114,4 +112,22 @@
   .navbar.open .navbar-links {
     display: flex;
   }
+}
+
+.nav-overlay{
+  /* backdrop-filter: blur(5px); */
+  /* border: 2px solid red; */
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  border-radius: 20px;
+  /* border:2px solid red; */
+  bottom: 0;
+  backdrop-filter: blur(8px);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* background: rgba(224, 224, 224, 0.182); */
+  /* z-index: ; */
 }
