--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,20 @@
 /* Home.css */
 .hotel {
-  /* background: url("./assets/hotel-bg.jpg");
-  background-size: cover; */
+  background: url("./assets/hotel-bg.jpg");
+  background-size:cover;
+  background-attachment: fixed;
+  min-height: 100vh;
+  width: 100vw;
 }
 
-.bgg {
+/* .bgg {
   border: 2px solid red;
-}
+} */
 
-.wel-bg {
+/* .wel-bg {
   background: url("./assets/hotel-bg.jpg");
   background-size: cover;
-}
+} */
 
 /* Container Styling */
 .signup-container {
@@ -240,8 +243,8 @@
   align-items: center;
   padding: 20px;
   color: #ffffff;
-  background-color: red;
-  background: url("./assets//OIP.jpeg");
+  /* background-color: red; */
+  /* background: url("./assets//OIP.jpeg"); */
   background-size: cover;
   width: 100%;
 
